--- a/public/pages/artisticEvent.ejs
+++ b/public/pages/artisticEvent.ejs
@@ -43,25 +43,8 @@
             <div class="col-12">
                 <div id="artist-wrapper" class="centralized">
                     <h2 class="wheat-item">Featuring:</h2>
-                    <div class="row d-flex justify-content-center">
-                        <div class="artist-box">
-                            <a href="#">
-                                <img class="artist-img" src="/images/HarryPotter.jpg">
-                            </a>
-                            <p class="wheat-item a-name">NameName</p>
-                        </div>
-                        <div class="artist-box">
-                            <a href="#">
-                                <img class="artist-img" src="/images/HarryPotter.jpg">
-                            </a>
-                            <p class="wheat-item a-name">NameName</p>
-                        </div>
-                        <div class="artist-box">
-                            <a href="#">
-                                <img class="artist-img" src="/images/HarryPotter.jpg">
-                            </a>
-                            <p class="wheat-item a-name">NameName</p>
-                        </div>
+                    <div id="featuringBox" class="row d-flex justify-content-center">
+                    
                     </div>
                 </div>
             </div>
@@ -73,7 +56,7 @@
             <div class="col-8">
                 <div class="abstract centralized">
                     <h3>Abstract</h3>
-                    <p>
+                    <p id="abstract">
                         content content content content content content content content content content content content
                         content content content content content content content content content content content content
                         content content content content content content content content content content content content
@@ -127,6 +110,9 @@
             });
         });
     </script>
+
+<script src="/js/script.js"></script>
+<script src="/js/artisticEvent.js"></script>
 </body>
 
 </html>
