--- a/public/pages/performerGroup.ejs
+++ b/public/pages/performerGroup.ejs
@@ -20,56 +20,14 @@
                 <div class="d-flex flex-row justify-content-center">
                     <h1 class="title">Single Artists</h1>
                 </div>
-                <div class="d-flex flex-row justify-content-center">
-                    <div class="wrapper">
-                        <div class="row">
-                            <img class="performer-img" src="/images/HarryPotter.jpg" alt="First Artist">
-                            <h2 class="performer-name"><a class="performer-link" href="#">Name Surname</a></h2>
-                        </div>
-                    </div>
-                </div>
-                <div class="d-flex flex-row justify-content-center">
-                    <div class="wrapper">
-                        <div class="row">
-                            <img class="performer-img" src="/images/HarryPotter.jpg" alt="First Artist">
-                            <h2 class="performer-name"><a class="performer-link" href="#">Name Surname</a></h2>
-                        </div>
-                    </div>
-                </div>
-                <div class="d-flex flex-row justify-content-center">
-                    <div class="wrapper">
-                        <div class="row">
-                            <img class="performer-img" src="/images/HarryPotter.jpg" alt="First Artist">
-                            <h2 class="performer-name"><a class="performer-link" href="#">Name Surname</a></h2>
-                        </div>
-                    </div>
+                <div id="performersContainer">
+                    
                 </div>
                 <div class="d-flex flex-row justify-content-center">
                     <h1 class="title">Companies</h1>
                 </div>
-                <div class="d-flex flex-row justify-content-center">
-                    <div class="wrapper">
-                        <div class="row">
-                            <img class="performer-img" src="/images/HarryPotter.jpg" alt="First Artist">
-                            <h2 class="performer-name"><a class="performer-link" href="#">Name Surname</a></h2>
-                        </div>
-                    </div>
-                </div>
-                <div class="d-flex flex-row justify-content-center">
-                    <div class="wrapper">
-                        <div class="row">
-                            <img class="performer-img" src="/images/HarryPotter.jpg" alt="First Artist">
-                            <h2 class="performer-name"><a class="performer-link" href="#">Name Surname</a></h2>
-                        </div>
-                    </div>
-                </div>
-                <div class="d-flex flex-row justify-content-center">
-                    <div class="wrapper">
-                        <div class="row">
-                            <img class="performer-img" src="/images/HarryPotter.jpg" alt="First Artist">
-                            <h2 class="performer-name"><a class="performer-link" href="#">Name Surname</a></h2>
-                        </div>
-                    </div>
+                <div id="companiesContainer">
+
                 </div>
             </div>
             <div class="col-2"></div>
@@ -77,7 +35,8 @@
     </div>
 
     <%- include('includes/footer.ejs') %>
-
+    <script src="/js/script.js"></script>
+    <script src="/js/performerGroup.js"></script>
 </body>
 
 </html>
