--- a/public/pages/home.ejs
+++ b/public/pages/home.ejs
@@ -19,6 +19,7 @@
     <%- include('includes/footer.ejs') %>
     <script src="/js/script.js"></script>
 <!--    <script src="/js/postTest.js"></script> -->
+    <script src="/js/postTest.js"></script>
 </body>
 
 </html>
