--- a/public/pages/eventsTypes.ejs
+++ b/public/pages/eventsTypes.ejs
@@ -14,7 +14,48 @@
     </nav>
 
     <div id="container" class="container">
-                       
+        <div class="s-wrapper centralized">
+            <div class="quote-wrapper">
+                <h1 class="title">Seminar</h1>
+                <p class="subtitle"> This seminars introduce a lot of interesting event, if you want to find the right
+                    event for you just try to follow one of these seminars</p>
+            </div>
+
+            <div id="slider-container" class="container">
+                <div id="slider" class="carousel slide">
+                    <ol class="carousel-indicators">
+                        <li data-target="#slider" data-slide-to="0" class="active"></li>
+                        <li data-target="#slider" data-slide-to="1"></li>
+                        <li data-target="#slider" data-slide-to="2"></li>
+                    </ol>
+                    <div class="carousel-inner">
+                        <div class="carousel-item active">
+                            <img src="/images/event-type/seminar01.jpg" alt="First slide">
+                        </div>
+                        <div class="carousel-item">
+                            <img src="/images/event-type/seminar02.jpg" alt="Second slide">
+                        </div>
+                        <div class="carousel-item">
+                            <img src="/images/event-type/seminar03.jpg" alt="Third slide">
+                        </div>
+                    </div>
+                    <a class="carousel-control-prev" href="#slider" role="button" data-slide="prev">
+                        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                        <span class="sr-only">Previous</span>
+                    </a>
+                    <a class="carousel-control-next" href="#slider" role="button" data-slide="next">
+                        <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                        <span class="sr-only">Next</span>
+                    </a>
+                </div>
+            </div>
+
+            <hr class="hr">
+
+            <h4 class="footcard">Click <a href="/siminars">here</a> to get to the list of events
+                of this type taking place in
+                this festival!</h4>
+        </div>
     </div>
 
     <%- include('includes/footer.ejs') %>
