--- a/public/pages/artisticEvent.ejs
+++ b/public/pages/artisticEvent.ejs
@@ -66,11 +66,8 @@
 
         <div class="row">
             <div class="col"></div>
-            <div class="col-12">
-                <div class="centralized  artist-wrapper">
-                    <h3 class="wheat-item">Want to know more about this event? Check the <a id="s-link"
-                            href="#">Seminar's Name</a></h3>
-                </div>
+            <div id="seminarContainer" class="col-12">
+
             </div>
             <div class="col"></div>
         </div>
