--- a/public/pages/performer.ejs
+++ b/public/pages/performer.ejs
@@ -34,14 +34,11 @@
                         </div>
                     </div>
                     <div class="card-body">
-                        <p><span class="font-weight-bold">Age:</span><span class="font-weight-light">
-                                53</span></p>
-                        <p><span class="font-weight-bold">Born in:</span><span class="font-weight-light">
-                                Yate, England</span></p>
-                        <p><span class="font-weight-bold">Genres:</span><span class="font-weight-light">
-                                Fantasy, Horror</span></p>
-                        <p><span class="font-weight-bold">Main Series:</span><span class="font-weight-light">
-                                Harry Potter</span></p>
+                        <p><span  class="font-weight-bold">Age:</span><span id="age" class="font-weight-light">
+                                </span></p>
+                        <p><span class="font-weight-bold">Born in:</span><span id="birth" class="font-weight-light">
+                                </span></p>
+ 
                     </div>
                     <hr>
                     <p id="followName" class="centralized subtitle">Follow J.K.Rowling on social media!</p>
@@ -59,8 +56,8 @@
             <div id="quote-wrapper">
                 <div class="quote"><i class="fa fa-quote-left fa-4x"></i></div>
                 <blockquote>
-                    <p class="subtitle">La mia ragazza mi piace come il caffè:</p>
-                    <p class="subtitle">Senza il cazzo di qualcun altro dentro</p>
+                    <p id="cit1" class="subtitle">La mia ragazza mi piace come il caffè:</p>
+                    <p id="cit2" class="subtitle">Senza il cazzo di qualcun altro dentro</p>
                 </blockquote>
             </div>
 
