--- a/public/pages/reservations.ejs
+++ b/public/pages/reservations.ejs
@@ -1,59 +1,23 @@
 <%- include('includes/head.ejs') %>
 <link rel="stylesheet" href="/css/reservations.css">
-<title>*Performer's Name*</title>
+<title>Reservations</title>
 </head>
 
 <body>
     <%- include('includes/navbar.ejs') %>
     <nav class="crumb" aria-label="breadcrumb">
         <ol class="breadcrumb crumb">
-            <li class="breadcrumb-item" aria-current="page"><a class="bc-item" href="#">Home</a></li>
-            <li class="breadcrumb-item" aria-current="page"><a class="bc-item" href="#">Performers</a></li>
-            <li class="breadcrumb-item bc-active" aria-current="page">Derren Brown</li>
+            <li class="breadcrumb-item" aria-current="page"><a class="bc-item" href="/">Home</a></li>
+            <li class="breadcrumb-item bc-active" aria-current="page">My Reservations</li>
         </ol>
     </nav>
 
-    <div class="container">
-        <div class="d-flex flex-row justify-content-center">
-            <div class="wrapper">
-                <div class="row">
-                    <div class="col">
-                        <h3><a href="#">Event 1</a></h3>
-                    </div>
-                    <div class="col right">
-                        <button type="button" class="btn btn-danger">Delete</button>
-                    </div>
-                </div>
-            </div>
-        </div>
-        <div class="d-flex flex-row justify-content-center">
-            <div class="wrapper">
-                <div class="row">
-                    <div class="col">
-                        <h3><a href="#">Event 1</a></h3>
-                    </div>
-                    <div class="col right">
-                        <button type="button" class="btn btn-danger">Delete</button>
-                    </div>
-                </div>
-            </div>
-        </div>
-        <div class="d-flex flex-row justify-content-center">
-            <div class="wrapper">
-                <div class="row">
-                    <div class="col">
-                        <h3><a href="#">Event 1</a></h3>
-                    </div>
-                    <div class="col right">
-                        <button type="button" class="btn btn-danger">Delete</button>
-                    </div>
-                </div>
-            </div>
-        </div>
+    <div id="container" class="container">
     </div>
 
     <%- include('includes/footer.ejs') %>
-
+    <script src="/js/script.js"></script>
+    <script src="/js/reservations.js"></script>
 </body>
 
 </html>
